Table channel {
  id uuid [pk, increment]
  created_at timestamptz
  updated_at timestamptz
  deleted_at timestamptz
  name varchar
  description varchar
  app_id uuid [ref: > app.id]
}

Table message_reaction {
  id uuid
  reaction_id uuid [ref: > reaction.id]
  message_id uuid [ref: > message.id]
  member_id uuid [ref: > member.id]
}

Table message_file {
  id int
  file_id uuid [ref: > file.id]
  message_id uuid [ref: > message.id]
}

Table message {
  id uuid [pk, increment]
  created_at timestamptz
  updated_at timestamptz
  deleted_at timestamptz
  sender_id uuid [ref: > member.id]
  body varchar
  channel_id uuid [ref: > channel.id]
  pinned boolean
  reply_to uuid [ref: > message.id]
  parent_id uuid [ref: > message.id]
}

Table member_channel {
  id int
  member_id uuid [ref: > member.id]
  channel_id uuid [ref: > channel.id]
}